Nulls test.